--- a/env/environtment.yaml
+++ b/env/environtment.yaml
@@ -11,6 +11,7 @@ dependencies:
   - bioconda::bedtools=2.30
   - bioconda::samtools=1.14
   - bioconda::scvelo=0.2.4
+  - bioconda::sra-tools
   - conda-forge::htcondor
   - conda-forge::pandoc
 #  - conda-forge::udunits2
