--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,6 +1,9 @@
 configfile: workflow.basedir + '/../config/config.yaml'
 
+include: 'Snakefile_prep.smk'
 include: 'Snakefile_preprocess.smk'
+include: 'Snakefile_single_modality.smk'
+include: 'Snakefile_pre_nbiotech.smk'
 
 samples_list  = list(config['samples'].keys())
 barcodes_dict = {sample: config['samples'][sample]['barcodes'] for sample in samples_list}
@@ -8,13 +11,14 @@ barcodes_dict = {sample: config['samples'][sample]['barcodes'] for sample in sam
 shell.executable("/bin/bash")
 shell.prefix("source ~/.bash_profile; conda activate " + config['general']['conda_env']  + " ; ")
 
-rule all_preprocess:
+rule all:
     input:
         # Single modality
-        expand('results/single_modality/{modality}/seurat/{feature}/Seurat_object_clustered_renamed.Rds',modality=antibodies_list,feature='peaks'),# TODO: use 'peaks' as variable
-        expand('results/single_modality/{modality}/seurat/{feature}/bigwig/{idents}/',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),# TODO: use 'peaks' and idents as variable
-        expand('results/single_modality/{modality}/seurat/{feature}/markers/{idents}/markers.csv',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),
+    #    ['results/multimodal_data/{sample}/{antibody}_{barcode}/seurat/peaks/Seurat_object.Rds'.format(sample=sample,antibody=antibody,barcode=barcodes_dict[sample][antibody]) for sample in samples_list for antibody in barcodes_dict[sample].keys()],
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/Seurat_object_clustered_renamed.Rds',modality=antibodies_list,feature='peaks'),# TODO: use 'peaks' as variable
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/bigwig/{idents}/',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),# TODO: use 'peaks' and idents as variable
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/markers/{idents}/markers.csv',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),
 
         # nbiotech data
-        expand('results/nbiotech_data/{sample}/seurat/bin_{binwidth}/Seurat_object.Rds', sample= samples_list, binwidth=5000)
+        expand('results/nbiotech_data/{sample}/seurat/bin_{binwidth}/Seurat_object.Rds', sample= samples_list_nbiotech, binwidth=5000)
 
