--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -15,6 +15,7 @@ rule all:
     input:
         # Single modality
     #    ['results/multimodal_data/{sample}/{antibody}_{barcode}/seurat/peaks/Seurat_object.Rds'.format(sample=sample,antibody=antibody,barcode=barcodes_dict[sample][antibody]) for sample in samples_list for antibody in barcodes_dict[sample].keys()],
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/integration/integration_RNA.Rds',modality=antibodies_list,feature='peaks'),
         expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/Seurat_object_clustered_renamed.Rds',modality=antibodies_list,feature='peaks'),# TODO: use 'peaks' as variable
         expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/bigwig/{idents}/',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),# TODO: use 'peaks' and idents as variable
         expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/markers/{idents}/markers.csv',modality=antibodies_list,feature='peaks',idents=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),
@@ -24,4 +25,5 @@ rule all:
 
         # bam files new
         expand('results/multimodal_data/single_modality/{modality}/bam/possorted_bam_sampleID.bam',modality = antibodies_list),
-        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/bam_per_cluster/{ident}/bam/',modality=antibodies_list,feature='peaks',ident=['idents_L1','idents_L2','idents_L3','seurat_clusters'])
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/bam_per_cluster/{ident}/bam/',modality=antibodies_list,feature='peaks',ident=['idents_L1','idents_L2','idents_L3','seurat_clusters']),
+        expand('results/multimodal_data/single_modality/{modality}/seurat/{feature}/bam_per_cluster/{ident}/bigwig/', modality=antibodies_list, feature='peaks', ident=['idents_L1', 'idents_L2', 'idents_L3', 'seurat_clusters']),
