--- a/env/environtment.yaml
+++ b/env/environtment.yaml
@@ -11,6 +11,7 @@ dependencies:
   - bioconda::bedtools=2.30
   - bioconda::samtools=1.14
   - bioconda::sra-tools
+  - bioconda::scrublet=0.2
   - conda-forge::htcondor
   - conda-forge::pandoc
   - conda-forge::udunits2
@@ -40,4 +41,5 @@ dependencies:
 # devtools::install_github('cole-trapnell-lab/monocle3')
 # devtools::install_github('cole-trapnell-lab/monocle3', ref="develop")
 # devtools::install_github("cole-trapnell-lab/cicero-release", ref = "monocle3")
-# devtools::install_github("r3fang/SnapATAC")
+# devtools::install_github("mardzix/SnapATAC", ref = 'change_rbind_error')
+# devtools::install_github("mojaveazure/seurat-disk")
