--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 samples:
   bcdCT_MB21_02:
     fastq_path:
-      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P23209/P23209/P23209_1001/
+      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P23209/P23209/P23209_1001/     # Modify path to fastq files here
     barcodes:
       ATAC: TATAGCCT
       H3K27ac: ATAGAGGC
@@ -11,46 +11,40 @@ samples:
 
   bcdCT_MB21_03:
     fastq_path:
-      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P23209/P23209/P23209_1002/
+      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P23209/P23209/P23209_1002/       # Modify path to fastq files here
     barcodes:
       H3K27ac: ATAGAGGC
       H3K27me3: CCTATCCT
-    GFP:
-      unsorted
-    Age:
-      P19
+    GFP: unsorted
+    Age: P19
 
   bcdCT_MB21_04:
     fastq_path:
-      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P24004/P24004_1001/
+      /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P24004/P24004_1001/          # Modify path to fastq files here
     barcodes:
       ATAC: TATAGCCT
       H3K27ac: ATAGAGGC
       H3K27me3: CCTATCCT
-    GFP:
-      unsorted
-    Age:
-      P19
+    GFP: unsorted
+    Age: P19
 
   bcdCT_MB21_05:
       fastq_path:
-        /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P24004/P24004_1002/
+        /data/proj/GCB_MB/bcd_CT/single-cell/fastq/P24004/P24004_1002/       # Modify path to fastq files here
       barcodes:
         H3K27ac: ATAGAGGC
         H3K27me3: CCTATCCT
-      GFP:
-        unsorted
-      Age:
-        P19
+      GFP: unsorted
+      Age: P19
 
 general:
   genome: mm10
-  tempdir: /data/proj/GCB_MB/tmp
+  tempdir: /data/proj/GCB_MB/tmp                                                          # Modify path here to tmp folder
   binwidth: [5000,10000,25000,50000,100000]
-  conda_env: bcdCT
-  cellranger_ref: /data/ref/cellranger-atac/refdata-cellranger-atac-mm10-2020-A-2.0.0/
+  conda_env: bcdCT                                                                        # Specify conda env name here
+  cellranger_ref: /data/ref/cellranger-atac/refdata-cellranger-atac-mm10-2020-A-2.0.0/    # Modify path here to cellranger reference folder
 
-nbiotech_data:
+nbiotech_data:  # nothing needed to change here
   url:
     bigwig: https://ftp.ncbi.nlm.nih.gov/geo/series/GSE157nnn/GSE157637/suppl/GSE157637_bigwig.tar.gz
     fragments: https://ftp.ncbi.nlm.nih.gov/geo/series/GSE157nnn/GSE157637/suppl/GSE157637_modified_fragments_file_cellranger.tar.gz
