--- a/env/environtment.yaml
+++ b/env/environtment.yaml
@@ -35,7 +35,7 @@ dependencies:
 #                       'limma', 'S4Vectors', 'SingleCellExperiment',
 #                       'SummarizedExperiment', 'batchelor', 'Matrix.utils'))
 
-# monocle3 dependencies
+# monocle3 dependencies - not sure if relevant
 # install.packages("udunits2",configure.args = c('--with-udunits2-include=/data/proj/GCB_MB/miniconda3/envs/bcdCT/include','--with-udunits2-lib=/data/proj/GCB_MB/miniconda3/envs/bcdCT/lib'))
 
 # install.packages("devtools")
